[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = "0.18.0"
tokio = "1.22.0"
hex = "*"
sha3 = "0.10.6"
hex-literal = "0.3.4"
near-jsonrpc-client = "0.4.1"
near-jsonrpc-primitives = "0.15.0"
near-primitives = "0.15.0"
serde_json = "1.0"
serde = "1.0.147"
near-crypto = "0.15.0"
dotenv = "0.15.0"
